--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "d3": "^7.0.0",
     "next": "^11.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-youtube": "^7.13.1",
+    "socket.io-client": "^4.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
