--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "next": "^11.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-youtube": "^7.13.1",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "socket.io-client": "^4.1.2"
   },
   "devDependencies": {
