--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev:server": "cd client && npm run build && cd .. && npm run start",
     "start": "node server.js",
     "heroku-postbuild": "npm install && cd .. && cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build && cd .. && cd server && node server.js",
-    "build-run": "npm install && cd .. && cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build && cd .. && cd server && node server.js"
+    "build-run": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build && cd .. && node server.js"
   },
   "author": "",
   "license": "ISC",
