--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "d3": "^7.0.0",
+    "get-youtube-id": "^1.0.1",
     "next": "^11.0.1",
     "react": "^17.0.2",
+    "react-debounce-input": "^3.2.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-youtube": "^7.13.1",
