--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev:server": "cd client && npm run build && cd .. && npm run start",
     "start": "node server.js",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
-    "build-run": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build && cd .. && node server.js"
+    "build-run": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build && cd .. && npm install && node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,8 +21,8 @@
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "morgan": "^1.10.0",
-    "socket.io": "^4.1.2",
-    "uuid": "^8.3.2"
+    "shortid": "^2.2.16",
+    "socket.io": "^4.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
