--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,13 @@
-version: '3.9'
+version: "3.9"
 
 services:
-  api:
-    container_name: you-sync-api
-    build:
-      context: ./
-    ports:
-      - 3333:3333
-    image: api
-    restart: unless-stopped
-    environment:
-      - PORT=3333
-    
-  
+    api:
+        container_name: you-sync-api
+        build:
+            context: ./
+        ports:
+            - "${PORT}:${PORT}"
+        image: api
+        restart: unless-stopped
+        expose:
+            - "${PORT}"
